@@ -5,7 +5,7 @@
     <span *ngIf="type == 'item'" (click)="isShareModalOpened = true" class="float-icon fas fa-share-alt"></span>
     <span *ngIf="type == 'shop'" (click)="isQRCodeModalOpened = true" class="float-icon fas fa-qrcode"></span>
     <span *ngIf="type == 'shop'" (click)="isInformationModalOpened = true" class="float-icon fas fa-info-circle"></span>
-    <span *ngIf="type == 'item'" [routerLink]="['/shop']" [queryParams]="{id: element?.shop?._id}" class="float-icon fas fa-store"></span>
+    <span *ngIf="type == 'item'" [routerLink]="['/shop', element?.shop?.username]" class="float-icon fas fa-store"></span>
     <a *ngIf="type == 'item' && isShownLocation" target="_blank" href="http://www.google.com/maps/place/{{element?.shop?.location?.coordinates[1]}},{{element?.shop?.location?.coordinates[0]}}">
         <span class="float-icon" style="height: 39px; padding: 5px;">
             <img style="width: 23px; vertical-align: text-top;" src="assets/images/png/icon.png" alt="logo location" />
